--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -8,7 +8,7 @@
     
     <link href="{{ app.request.basepath }}/css/microcms.css" rel="stylesheet">
 
-    <title>ExactTarget - {% block title %}{% endblock %}</title>
+    <title>Skyflow - {% block title %}{% endblock %}</title>
 </head>
 <body>
     <div class="container">
@@ -20,7 +20,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/">ExactTarget</a>
+                    <a class="navbar-brand" href="/">Skyflow</a>
                 </div>
                 <div class="collapse navbar-collapse" id="navbar-collapse-target">
                     <ul class="nav navbar-nav navbar-right">
@@ -57,7 +57,7 @@
         <div id="content">{% block content %}{% endblock %}</div>
         {% endautoescape %}
         <footer class="footer">
-            <a href="http://www.exacttarget.com/fr">ExactTarget</a> 
+            Skyflow 
         </footer>
     </div>
 
