Update view events

--- a/views/events.html.twig
+++ b/views/events.html.twig
@@ -22,7 +22,7 @@
                         <tr>
                         	<td>{{ event.ID}}</td>
                         	<td>{{event.event}}</td>
-        					<td><a href="trigger/{{event.triggerSend}}">{{event.triggerSend}}</a></td>
+        					<td><a href="trigger/{{event.triggersend}}">{{event.triggerSend}}</a></td>
                             <td><button type="button" class="btn btn-danger btn-xs" title="Delete" data-toggle="modal" data-target="#eventDialog{{ event.ID }}"><span class="glyphicon glyphicon-trash"></span></button>
 
                                 <div class="modal fade" id="eventDialog{{ event.ID }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
