Update menu, api controller, ET controller

--- a/views/events.html.twig
+++ b/views/events.html.twig
@@ -14,7 +14,7 @@
                     <tr>
                         <th>ID</th>
                         <th>Event</th>
-                        <th>TriggeredSend</th>
+                        <th>Flows</th>
                         <th></th>
                     </tr>
                 </thead>
