--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -8,7 +8,7 @@
     
     <link href="{{ app.request.basepath }}/css/microcms.css" rel="stylesheet">
 
-    <title>Skyflow - {% block title %}{% endblock %}</title>
+    <title>Skyflow.io - {% block title %}{% endblock %}</title>
 </head>
 <body>
     <div class="container">
@@ -20,7 +20,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/">Skyflow</a>
+                    <a class="navbar-brand" href="/">Skyflow.io</a>
                 </div>
                 <div class="collapse navbar-collapse" id="navbar-collapse-target">
                     <ul class="nav navbar-nav navbar-right">
@@ -29,12 +29,17 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-th-list"></span>
                                  Welcome, {{ app.security.token.user.username }}<b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="{{ path('emails') }}">Emails</a></li>
-                                    <li><a href="{{ path('subscribers') }}">Subscribers</a></li>
-                                    <li><a href="{{ path('lists') }}">Lists</a></li>
-                                    <li><a href="{{ path('triggers') }}">Triggers</a></li>
-                                    <li><a href="{{ path('listsSub') }}">Lists Subscribers</a></li>
-                                    <li><a href="{{ path('events') }}">Events</a></li>
+                                     <li><a href="{{ path('events') }}">Events</a></li>
+                                    <li><a href="">Flows</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="">Wave Setup</a></li>
+                                    <li><a href="{{ path('ET_credentials') }}">ExactTarget Setup</a></li>
+                                    <li><a href="">Salesforce Setup</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="{{ path('et-helper') }}">ExactTarget API Helper</a></li>
+                                    <li><a href="">Wave API Helper</a></li>
+                                    <li><a href="">Salesforce API Helper</a></li>
+                                    <li class="divider"></li>
                                     <li><a href="{{ path('logout') }}">Log out</a></li>
                                 </ul>
                             </li> 
@@ -57,7 +62,7 @@
         <div id="content">{% block content %}{% endblock %}</div>
         {% endautoescape %}
         <footer class="footer">
-            Skyflow 
+            Skyflow.io
         </footer>
     </div>
 
