Add wave credentials

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -32,7 +32,7 @@
                                      <li><a href="{{ path('events') }}">Events</a></li>
                                     <li><a href="">Flows</a></li>
                                     <li class="divider"></li>
-                                    <li><a href="">Wave Setup</a></li>
+                                    <li><a href="{{ path('wave_credentials')}}">Wave Setup</a></li>
                                     <li><a href="{{ path('ET_credentials') }}">ExactTarget Setup</a></li>
                                     <li><a href="">Salesforce Setup</a></li>
                                     <li class="divider"></li>
