--- a/views/wave-credentials.html.twig
+++ b/views/wave-credentials.html.twig
@@ -1,14 +1,8 @@
 {% extends "layout.html.twig" %}
 
-{% block title %}Add ExactTarget credentials{% endblock %}
+{% block title %}Add Wave credentials{% endblock %}
 
 {% block content %}
-	<h2 class="text-center">{{ block('title') }}</h2>
-{% for flashMessage in app.session.flashbag.get('success') %}
-<div class="alert alert-success">
-    {{ flashMessage }}
-</div>
-{% endfor %}
 
 <form action="#" method="post">
 	{{form_start(etForm)}}
