--- a/views/event-form.html.twig
+++ b/views/event-form.html.twig
@@ -7,7 +7,7 @@
 <form action="#" method="post">
 	{{form_start(eventForm)}}
 		{{form_row(eventForm.event, {'label' : 'Event'}) }}
-		{{form_row(eventForm.trigger, {'label' : 'Trigger'}) }}
+		{{form_row(eventForm.trigger, {'label' : 'Flow'}) }}
 
 	
 	 <input type="submit" name="submit" value="Add !" />
