--- a/views/et-apihelper.html.twig
+++ b/views/et-apihelper.html.twig
@@ -13,6 +13,8 @@
                             <tr>
                                 <th>Email Address</th>
                                 <th>Subscriber Key</th>
+                                <th>First Name</th>
+                                <th>Last Name</th>
                                 <th></th>
                             </tr>
                         </thead>
@@ -20,6 +22,9 @@
                                     <tr>
                                         <td>{{ subscriber.EmailAddress}}</td>
                                         <td>{{ subscriber.SubscriberKey}}</td>
+                                        <td> {{ subscriber.FirstName }}</td>
+                                        <td>{{  subscriber.LastName }}</td>
+
                                         <td><button type="button" class="btn btn-danger btn-xs" title="Delete" data-toggle="modal" data-target="#subDialog{{ subscriber.ID }}"><span class="glyphicon glyphicon-trash"></span></button>
  <div class="modal fade" id="subDialog{{ subscriber.ID }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                             <div class="modal-dialog">
