--- a/views/event-form.html.twig
+++ b/views/event-form.html.twig
@@ -1,13 +1,13 @@
 {% extends "layout.html.twig" %}
 
-{% block title %}Add Event/Trigger{% endblock %}
+{% block title %}Add Event{% endblock %}
 
 {% block content %}
 
 <form action="#" method="post">
 	{{form_start(eventForm)}}
-		{{form_row(eventForm.event, {'label' : 'Event'}) }}
-		{{form_row(eventForm.trigger, {'label' : 'Flow'}) }}
+		{{form_row(eventForm.name, {'label' : 'Name'}) }}
+		{{form_row(eventForm.description, {'label' : 'Description'}) }}
 
 	
 	 <input type="submit" name="submit" value="Add !" />
