--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -30,15 +30,19 @@
                                  Welcome, {{ app.security.token.user.username }}<b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                      <li><a href="{{ path('events') }}">Events</a></li>
-                                    <li><a href="">Flows</a></li>
+                                    <li><a href="{{ path('flows') }}">Flows</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="{{ path('associations') }}">Associations</a></li>
                                     <li class="divider"></li>
                                     <li><a href="{{ path('wave_credentials')}}">Wave Setup</a></li>
                                     <li><a href="{{ path('ET_credentials') }}">ExactTarget Setup</a></li>
                                     <li><a href="">Salesforce Setup</a></li>
                                     <li class="divider"></li>
                                     <li><a href="{{ path('et-helper') }}">ExactTarget API Helper</a></li>
-                                    <li><a href="">Wave API Helper</a></li>
+                                    <li><a href="{{ path('wave-helper') }}">Wave API Helper</a></li>
                                     <li><a href="">Salesforce API Helper</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="{{ path('gestionToken') }}">Skyflow-Token Gestion</a></li>
                                     <li class="divider"></li>
                                     <li><a href="{{ path('logout') }}">Log out</a></li>
                                 </ul>
