Update wave api helper, association -> mapping

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -32,7 +32,7 @@
                                      <li><a href="{{ path('events') }}">Events</a></li>
                                     <li><a href="{{ path('flows') }}">Flows</a></li>
                                     <li class="divider"></li>
-                                    <li><a href="{{ path('associations') }}">Associations</a></li>
+                                    <li><a href="{{ path('associations') }}">Mapping</a></li>
                                     <li class="divider"></li>
                                     <li><a href="{{ path('wave_credentials')}}">Wave Setup</a></li>
                                     <li><a href="{{ path('ET_credentials') }}">ExactTarget Setup</a></li>
