--- a/views/emails.html.twig
+++ b/views/emails.html.twig
@@ -3,6 +3,7 @@
 {% block title %}All Emails{% endblock %}
 
 {% block content %}
+    <h2 class="text-center">{{ block('title') }}</h2>
         <a href="createEmail"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span> Create Email</button></a>
 <div class="tab-content">
     <div class="tab-pane fade in active" >
