--- a/views/et-apihelper.html.twig
+++ b/views/et-apihelper.html.twig
@@ -1,8 +1,9 @@
 {% extends "layout.html.twig" %}
 
-{% block title %}ExatTarget API Helper{% endblock %}
+{% block title %}ExactTarget API Helper{% endblock %}
 
 {% block content %}
+    <h2 class="text-center">{{ block('title') }}</h2>
       <a href="addSub"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span> Add subscriber</button></a>
     <div class="tab-content">
         <div class="tab-pane fade in active" >
