--- a/views/events.html.twig
+++ b/views/events.html.twig
@@ -3,6 +3,7 @@
 {% block title %}All Events{% endblock %}
 
 {% block content %}
+    <h2 class="text-center">{{ block('title') }}</h2>
         <a href="createEvent"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span> Create Event</button></a>
 <div class="tab-content">
     <div class="tab-pane fade in active" >
