--- a/views/flows.html.twig
+++ b/views/flows.html.twig
@@ -3,6 +3,7 @@
 {% block title %}All Flows{% endblock %}
 
 {% block content %}
+    <h2 class="text-center">{{ block('title') }}</h2>
     <a href="createFlow"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span> Create Flow</button></a>
     <div class="tab-content">
         <div class="tab-pane fade in active" >
