--- a/views/event-form.html.twig
+++ b/views/event-form.html.twig
@@ -1,8 +1,9 @@
 {% extends "layout.html.twig" %}
 
-{% block title %}Add Event{% endblock %}
+{% block title %}New Event{% endblock %}
 
 {% block content %}
+	<h2 class="text-center">{{ block('title') }}</h2>
 
 <form action="#" method="post">
 	{{form_start(eventForm)}}
