--- a/views/flow-form.html.twig
+++ b/views/flow-form.html.twig
@@ -1,8 +1,9 @@
 {% extends "layout.html.twig" %}
 
-{% block title %}Add Flow{% endblock %}
+{% block title %}New Flow{% endblock %}
 
 {% block content %}
+    <h2 class="text-center">{{ block('title') }}</h2>
 
     <form action="#" method="post">
         {{form_start(flowForm)}}
