--- a/views/subscriber-form.html.twig
+++ b/views/subscriber-form.html.twig
@@ -1,9 +1,9 @@
 {% extends "layout.html.twig" %}
 
-{% block title %}Add Subscriber{% endblock %}
+{% block title %}New Subscriber{% endblock %}
 
 {% block content %}
-
+	<h2 class="text-center">{{ block('title') }}</h2>
 <form action="#" method="post">
 	{{ form_start(subForm) }}
 		{{ form_row(subForm.EmailAddress, {'label':'Email Address'}) }}
