--- a/views/wave-apihelper.html.twig
+++ b/views/wave-apihelper.html.twig
@@ -3,53 +3,38 @@
 {% block title %}Wave API Helper{% endblock %}
 
 {% block content %}
-                <div class="tab-content">
-                    <div class="tab-pane fade in active" >
+    <div class="tab-content">
+        <div class="tab-pane fade in active" >
 
-                        <form action="#" method="post">
-                            {{ form_start(requestForm) }}
-                            {{ form_row(requestForm.Request, {'label': 'Request'}) }}
-                            <input type="submit" name="submit" value="Send Request ! " />
-                            {{ form_end(requestForm) }}
-                        </form>
+            <form action="#" method="post">
+                {{ form_start(requestForm) }}
+                {{ form_row(requestForm.Request, {'label': 'Request'}) }}
+                <input type="submit" name="submit" value="Send Request ! " />
+                {{ form_end(requestForm) }}
+            </form>
 
-                        {% if results %}
-                            <ul>
-                                {% for key,value in results %}
-                                    <li>{{ key }} : {{ value }}</li>
-
-                                {% endfor %}
-                            </ul>
-                        {% else %}
-
-                        {% if datasets %}
-                            <div class="table-responsive">
-                                <table class="table table-hover table-condensed viewTable" id="datasets">
-                                    <thead>
-                                    <tr>
-                                        <th>Name</th>
-                                        <th>ID</th>
-                                        <th>Version ID</th>
-                                    </tr>
-                                    </thead>
-                                    {% for dataset in datasets %}
-                                        <tr>
-                                            <td>{{ dataset.name}}</td>
-                                            <td>{{ dataset.id}}</td>
-                                            <td>{{ dataset.versionId }}</td>
-                                        </tr>
-                                    {% endfor %}
-                                </table>
-                            </div>
-                        {% else %}
-                            <div class="alert alert-warning">No datasets found ! </div>
-                        {% endif %}
-
-                        {% endif %}
-
-                    </div>
+            {% if history %}
+                <div class="table-responsive">
+                    <table class="table table-hover table-condensed viewTable" id="requests">
+                        <thead>
+                        <tr>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                        </thead>
+                          {% for h in history %}
+                                <tr>
+                                    <td> {{ h.request }} </td>
+                                    <td>  <a href="/resend/{{h.id}}"><button type="button" class="btn-default" title="Resend">Resend</button></a></td>
+                                </tr>
+                          {% endfor %}
+                    </table>
                 </div>
+            {% else %}
+                <div class="alert alert-warning">No history ! </div>
+            {% endif %}
 
-
+        </div>
+    </div>
 
 {% endblock %}
