--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -22,41 +22,39 @@
                     </button>
                     <a class="navbar-brand" href="/">Skyflow.io</a>
                 </div>
-                <div class="collapse navbar-collapse" id="navbar-collapse-target">
-                    <ul class="nav navbar-nav navbar-right">
-                        {% if app.security.token and is_granted('IS_AUTHENTICATED_FULLY') %}
-                            <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-th-list"></span>
-                                 Welcome, {{ app.security.token.user.username }}<b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                     <li><a href="{{ path('events') }}">Events</a></li>
-                                    <li><a href="{{ path('flows') }}">Flows</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="{{ path('associations') }}">Mapping</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="{{ path('wave_credentials')}}">Wave Setup</a></li>
-                                    <li><a href="{{ path('ET_credentials') }}">ExactTarget Setup</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="{{ path('et-helper') }}">ExactTarget API Helper</a></li>
-                                    <li><a href="{{ path('wave-helper') }}">Wave API Helper</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="{{ path('gestionToken') }}">Skyflow-Token Gestion</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="{{ path('logout') }}">Log out</a></li>
-                                </ul>
-                            </li> 
-                             {% else %}
 
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    {% if app.security.token and is_granted('IS_AUTHENTICATED_FULLY') %}
+                        <ul class="nav navbar-nav navbar-right">
                             <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <span class="glyphicon glyphicon-user"></span> Not connected <b class="caret"></b></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Create <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="{{ path('login') }}">Log in</a></li>
-                                    <li><a href="{{ path('account') }}">Create account</a></li>
+                                    <li><a href="{{ path('events') }}">Events</a></li>
+                                    <li><a href="{{ path('flows') }}">Flows</a></li>
                                 </ul>
                             </li>
-                        {% endif %}       
-                    </ul>
+                            <li><a href="{{ path('associations') }}">Mapping</a></li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Setup <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="{{ path('wave_credentials')}}">Wave Setup</a></li>
+                                    <li><a href="{{ path('ET_credentials') }}">ExactTarget Setup</a></li>
+                                </ul>
+                            </li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Helper <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="{{ path('et-helper') }}">ExactTarget API Helper</a></li>
+                                    <li><a href="{{ path('wave-helper') }}">Wave API Helper</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="{{ path('gestionToken') }}">Skyflow-Token Gestion</a></li>
+                            <li><a href="{{ path('logout') }}">Log out</a></li>
+                    {% else %}
+                            <li><a href="{{ path('login') }}">Log in</a></li>
+                            <li><a href="{{ path('account') }}">Create account</a></li>
+                    {% endif %}
+                        </ul>
                 </div>
             </div><!-- /.container -->
         </nav>
