--- a/views/generateToken.html.twig
+++ b/views/generateToken.html.twig
@@ -3,10 +3,22 @@
 {% block title %}Regenerate Skyflow-Token{% endblock %}
 
 {% block content %}
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Regenerate Skyflow-Token
+            </h1>
+            <ol class="breadcrumb">
+                <li><a href="/">Home</a></li>
+                <li><a href="gestionToken">Gestion Skyflow-Token</a></li>
+                <li class="active">Regenerate Skyflow-Token</li>
+            </ol>
+        </div>
+    </div>
 
     <div class="alert alert-info">
       New Skyflow-Token : {{ user.skyflowToken }}
     </div>
-
+</div>
 
 {% endblock %}
