--- a/views/wave-apihelper.html.twig
+++ b/views/wave-apihelper.html.twig
@@ -3,6 +3,13 @@
 {% block title %}Wave API Helper{% endblock %}
 
 {% block content %}
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Wave API Helper
+            </h1>
+        </div>
+    </div>
     <div class="tab-content">
         <div class="tab-pane fade in active" >
 
@@ -36,5 +43,5 @@
 
         </div>
     </div>
-
+</div>
 {% endblock %}
