--- a/views/association-form.html.twig
+++ b/views/association-form.html.twig
@@ -3,7 +3,18 @@
 {% block title %}New mapping{% endblock %}
 
 {% block content %}
-    <h2 class="text-center">{{ block('title') }}</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">New Mapping
+            </h1>
+            <ol class="breadcrumb">
+                <li><a href="/">Home</a></li>
+                <li><a href="mapping">Mapping</a></li>
+                <li class="active">Create</li>
+            </ol>
+        </div>
+    </div>
 
     <form action="#" method="post">
         {{form_start(associationForm)}}
@@ -14,4 +25,5 @@
         <input type="submit" name="submit" value="Add !" />
         {{form_end(associationForm)}}
     </form>
+</div>
 {% endblock %}
