--- a/views/associations.html.twig
+++ b/views/associations.html.twig
@@ -3,8 +3,19 @@
 {% block title %}Mapping{% endblock %}
 
 {% block content %}
-    <h2 class="text-center">{{ block('title') }}</h2>
-    <a href="createAssociation"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span> Create Association</button></a>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Mapping
+            </h1>
+            <ol class="breadcrumb">
+                <li><a href="/">Home</a></li>
+                <li class="active">Mapping</li>
+                <li><a href="createMapping">Create</a></li>
+            </ol>
+        </div>
+    </div>
+   <!-- <a href="createMapping"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span> Create Mapping</button></a>-->
     <div class="tab-content">
         <div class="tab-pane fade in active" >
             {% if associations %}
@@ -38,7 +49,7 @@
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                                                    <a href="/association/{{association.id}}/delete" class="btn btn-danger">Confirm</a>
+                                                    <a href="/mapping/{{association.id}}/delete" class="btn btn-danger">Confirm</a>
                                                 </div>
                                             </div><!-- /.modal-content -->
                                         </div><!-- /.modal-dialog -->
@@ -54,5 +65,5 @@
             {% endif %}
         </div>
     </div>
-
+</div>
 {% endblock %}
