--- a/views/et-credentials-form.html.twig
+++ b/views/et-credentials-form.html.twig
@@ -3,20 +3,31 @@
 {% block title %}Add ExactTarget credentials{% endblock %}
 
 {% block content %}
-	<h2 class="text-center">{{ block('title') }}</h2>
-{% for flashMessage in app.session.flashbag.get('success') %}
-<div class="alert alert-success">
-    {{ flashMessage }}
+<div class="container">
+	<div class="row">
+		<div class="col-lg-12">
+			<h1 class="page-header">Add ExactTarget Credentials
+			</h1>
+			<ol class="breadcrumb">
+				<li><a href="/">Home</a></li>
+				<li class="active">Add ExactTargetCredentials</li>
+			</ol>
+		</div>
+	</div>
+		{% for flashMessage in app.session.flashbag.get('success') %}
+		<div class="alert alert-success">
+			{{ flashMessage }}
+		</div>
+		{% endfor %}
+
+		<form action="#" method="post">
+			{{form_start(etForm)}}
+				{{form_row(etForm.clientid, {'label' : 'Client ID'}) }}
+				{{form_row(etForm.clientsecret, {'label' : 'Client Secret'}) }}
+
+
+			 <input type="submit" name="submit" value="Add credentials !" />
+		   {{form_end(etForm)}}
+		</form>
 </div>
-{% endfor %}
-
-<form action="#" method="post">
-	{{form_start(etForm)}}
-		{{form_row(etForm.clientid, {'label' : 'Client ID'}) }}
-		{{form_row(etForm.clientsecret, {'label' : 'Client Secret'}) }}
-
-	
-	 <input type="submit" name="submit" value="Add credentials !" />
-   {{form_end(etForm)}}
-</form>
 {% endblock %}
