--- a/views/event-edit.html.twig
+++ b/views/event-edit.html.twig
@@ -3,7 +3,14 @@
 {% block title %}Update Event{% endblock %}
 
 {% block content %}
-    <h2 class="text-center">Update Event</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Update Event
+            </h1>
+
+        </div>
+    </div>
 
     <form action="#" method="post">
         {{form_start(eventForm)}}
@@ -14,4 +21,5 @@
         <input type="submit" name="submit" value="Update !" />
         {{form_end(eventForm)}}
     </form>
+</div>
 {% endblock %}
