--- a/views/events.html.twig
+++ b/views/events.html.twig
@@ -3,56 +3,71 @@
 {% block title %}All Events{% endblock %}
 
 {% block content %}
-    <h2 class="text-center">{{ block('title') }}</h2>
-        <a href="createEvent"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span> Create Event</button></a>
-<div class="tab-content">
-    <div class="tab-pane fade in active" >
-    {% if events %}
-        
-        <div class="table-responsive">
-            <table class="table table-hover table-condensed viewTable" id="emails">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Name</th>
-                        <th>Description</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                    {% for event in events %}
-                        <tr>
-                        	<td>{{ event.ID}}</td>
-                        	<td>{{event.name}}</td>
-        					<td>{{event.description}}</td>
-                            <td><button type="button" class="btn btn-danger btn-xs" title="Delete" data-toggle="modal" data-target="#eventDialog{{ event.ID }}"><span class="glyphicon glyphicon-trash"></span></button>
 
-                                <div class="modal fade" id="eventDialog{{ event.ID }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                                <h4 class="modal-title" id="myModalLabel">Confirmation needed</h4>
-                                            </div>
-                                            <div class="modal-body">
-                                                Do you really want to delete this event ?
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                                                <a href="/event/{{event.ID}}/delete" class="btn btn-danger">Confirm</a>
-                                            </div>
-                                        </div><!-- /.modal-content -->
-                                    </div><!-- /.modal-dialog -->
-                                </div><!-- /.modal -->
-                                                </td>
-        				</tr>
-    				{% endfor %}
-			</table> 
+    <div class="container">
+       <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">All Events
+                </h1>
+                <ol class="breadcrumb">
+                    <li><a href="/">Home</a></li>
+                    <li class="active">Events</li>
+                    <li><a href="createEvent">Create</a></li>
+                </ol>
+            </div>
         </div>
-      
-			{% else %}
-			<div class="alert alert-warning">No events found ! </div>
-	{% endif %}
-</div>
-</div>
+
+
+            <div class="tab-content">
+                <div class="tab-pane fade in active" >
+                {% if events %}
+
+                    <div class="table-responsive">
+                        <table class="table table-hover table-condensed viewTable" id="emails">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Name</th>
+                                    <th>Description</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                                {% for event in events %}
+                                    <tr>
+                                        <td>{{ event.ID}}</td>
+                                        <td>{{event.name}}</td>
+                                        <td>{{event.description}}</td>
+                                        <td><button type="button" class="btn btn-danger btn-xs" title="Delete" data-toggle="modal" data-target="#eventDialog{{ event.ID }}"><span class="glyphicon glyphicon-trash"></span></button>
+
+                                            <div class="modal fade" id="eventDialog{{ event.ID }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                                <div class="modal-dialog">
+                                                    <div class="modal-content">
+                                                        <div class="modal-header">
+                                                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                                            <h4 class="modal-title" id="myModalLabel">Confirmation needed</h4>
+                                                        </div>
+                                                        <div class="modal-body">
+                                                            Do you really want to delete this event ?
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                                            <a href="/event/{{event.ID}}/delete" class="btn btn-danger">Confirm</a>
+                                                        </div>
+                                                    </div><!-- /.modal-content -->
+                                                </div><!-- /.modal-dialog -->
+                                            </div><!-- /.modal -->
+                                                            </td>
+                                    </tr>
+                                {% endfor %}
+                        </table>
+                    </div>
+
+                        {% else %}
+                        <div class="alert alert-warning">No events found ! </div>
+                        {% endif %}
+                </div>
+            </div>
+
+    </div>
 
 {% endblock %}
