--- a/views/flow-edit.html.twig
+++ b/views/flow-edit.html.twig
@@ -1,9 +1,15 @@
 {% extends "layout.html.twig" %}
 
-{% block title %}New Flow{% endblock %}
+{% block title %}Update Flow{% endblock %}
 
 {% block content %}
-    <h2 class="text-center"> Update Flow </h2>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Update Flow
+            </h1>
+        </div>
+    </div>
 
     <form action="#" method="post">
         {{form_start(flowForm)}}
@@ -15,4 +21,5 @@
         <input type="submit" name="submit" value="Update !" />
         {{form_end(flowForm)}}
     </form>
+</div>
 {% endblock %}
