--- a/views/flow-form.html.twig
+++ b/views/flow-form.html.twig
@@ -3,7 +3,18 @@
 {% block title %}New Flow{% endblock %}
 
 {% block content %}
-    <h2 class="text-center">{{ block('title') }}</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Create Flow
+            </h1>
+            <ol class="breadcrumb">
+                <li><a href="/">Home</a></li>
+                <li><a href="flows">Flows</a></li>
+                <li class="active">Create</li>
+            </ol>
+        </div>
+    </div>
 
     <form action="#" method="post">
         {{form_start(flowForm)}}
@@ -15,4 +26,5 @@
         <input type="submit" name="submit" value="Add !" />
         {{form_end(flowForm)}}
     </form>
+</div>
 {% endblock %}
