--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -33,7 +33,7 @@
                                     <li><a href="{{ path('flows') }}">Flows</a></li>
                                 </ul>
                             </li>
-                            <li><a href="{{ path('associations') }}">Mapping</a></li>
+                            <li><a href="{{ path('mapping') }}">Mapping</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Setup <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
@@ -67,7 +67,8 @@
     </div>
 
     <!-- jQuery -->
-    <script src="{{ app.request.basepath }}/lib/jquery/jquery.js"></script>  
+    <script src="{{ app.request.basepath }}/lib/jquery/jquery.js"></script>
+    
     <!-- JavaScript Boostrap plugin -->
     <script src="{{ app.request.basepath }}/lib/bootstrap/js/bootstrap.min.js"></script>
     <!-- Ckeditor -->
