--- a/views/wave-credentials-form.html.twig
+++ b/views/wave-credentials-form.html.twig
@@ -3,22 +3,33 @@
 {% block title %}Add Wave credentials{% endblock %}
 
 {% block content %}
-<h2 class="text-center">{{ block('title') }}</h2>
-{% for flashMessage in app.session.flashbag.get('success') %}
-<div class="alert alert-success">
-    {{ flashMessage }}
+<div class="container">
+	<div class="row">
+		<div class="col-lg-12">
+			<h1 class="page-header">Add Wave Credentials
+			</h1>
+			<ol class="breadcrumb">
+				<li><a href="/">Home</a></li>
+				<li class="active">Add Wave Credentials</li>
+			</ol>
+		</div>
+	</div>
+		{% for flashMessage in app.session.flashbag.get('success') %}
+		<div class="alert alert-success">
+			{{ flashMessage }}
+		</div>
+		{% endfor %}
+
+		<form action="#" method="post">
+			{{form_start(waveForm)}}
+				{{form_row(waveForm.waveid, {'label' : 'Wave Client ID'}) }}
+				{{form_row(waveForm.wavesecret, {'label' : 'Wave Client Secret'}) }}
+				{{form_row(waveForm.wavelogin, {'label' : 'Login Salesforce'}) }}
+				{{form_row(waveForm.wavepassword, {'label' : 'Password Salesforce + Security Token'}) }}
+
+
+			 <input type="submit" name="submit" value="Add credentials !" />
+		   {{form_end(waveForm)}}
+		</form>
 </div>
-{% endfor %}
-
-<form action="#" method="post">
-	{{form_start(waveForm)}}
-		{{form_row(waveForm.waveid, {'label' : 'Wave Client ID'}) }}
-		{{form_row(waveForm.wavesecret, {'label' : 'Wave Client Secret'}) }}
-		{{form_row(waveForm.wavelogin, {'label' : 'Login Salesforce'}) }}
-		{{form_row(waveForm.wavepassword, {'label' : 'Password Salesforce + Security Token'}) }}
-
-	
-	 <input type="submit" name="submit" value="Add credentials !" />
-   {{form_end(waveForm)}}
-</form>
 {% endblock %}
