--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="col-md-6">
                 <h3>
-                    <a href="GestionToken">Manage Token</a>
+                    <a href="gestionToken">Manage Token</a>
                 </h3>
 
             </div>
@@ -76,7 +76,7 @@
             </div>
             <div class="col-md-2">
                 <h3>
-                    <a href="et_helper">helper</a>
+                    <a href="et-helper">helper</a>
                 </h3>
 
             </div>
@@ -105,7 +105,7 @@
             </div>
             <div class="col-md-2">
                 <h3>
-                    <a href="wave_helper">helper</a>
+                    <a href="wave-helper">helper</a>
                 </h3>
 
             </div>
