Update menu, home, logo, nav

--- a/views/associations.html.twig
+++ b/views/associations.html.twig
@@ -10,9 +10,12 @@
             </h1>
             <ol class="breadcrumb">
                 <li><a href="/">Home</a></li>
-                <li class="active">Mapping</li>
+                <li><a href="flows">View all flows</a></li>
+                <li><a href="events">View all events</a></li>
                 <li><a href="createMapping">Create</a></li>
+                <li class="active">Mapping</li>
             </ol>
+
         </div>
     </div>
    <!-- <a href="createMapping"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span> Create Mapping</button></a>-->
