--- a/views/generateToken.html.twig
+++ b/views/generateToken.html.twig
@@ -16,8 +16,11 @@
         </div>
     </div>
 
-    <div class="alert alert-info">
-      New Skyflow-Token : {{ user.skyflowToken }}
+    <div class="panel panel-default">
+        <div class="panel-heading">New Skyflow-Token</div>
+        <div class="panel-body">
+            {{ user.skyflowtoken }}
+        </div>
     </div>
 </div>
 
