--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -19,15 +19,15 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-6">
-                <h3>
+                <h4>
                     <a href="gestionToken">Manage Token</a>
-                </h3>
+                </h4>
 
             </div>
             <div class="col-md-6">
-                <h3>
+                <h4>
                     <a href="mapping"> Flows / mapping</a>
-                </h3>
+                </h4>
 
             </div>
         </div>
@@ -36,15 +36,15 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-6">
-                <h3>
+                <h4>
                     <a href="/">Metrics</a>
-                </h3>
+                </h4>
 
             </div>
             <div class="col-md-6">
-                <h3>
+                <h4>
                     <a href="/">   Documentation</a>
-                </h3>
+                </h4>
 
             </div>
         </div>
@@ -62,28 +62,28 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6">
-                <h3>
+            <div class="col-md-4">
+                <h4>
                     ExactTarget                            </a>
-                </h3>
+                </h4>
 
             </div>
-            <div class="col-md-2">
-                <h3>
+            <div class="col-md-1">
+                <h4>
                     <a href="ET_credentials">setup</a>
-                </h3>
+                </h4>
 
             </div>
-            <div class="col-md-2">
-                <h3>
+            <div class="col-md-1">
+                <h4>
                     <a href="et-helper">helper</a>
-                </h3>
+                </h4>
 
             </div>
-            <div class="col-md-2">
-                <h3>
+            <div class="col-md-1">
+                <h4>
                     <a href="/">documentation</a>
-                </h3>
+                </h4>
 
             </div>
         </div>
@@ -91,35 +91,102 @@
 
         <!-- Projects Row -->
         <div class="row">
-            <div class="col-md-6">
-                <h3>
+            <div class="col-md-4">
+                <h4>
                     Wave
-                </h3>
+                </h4>
 
             </div>
-            <div class="col-md-2">
-                <h3>
+            <div class="col-md-1">
+                <h4>
                     <a href="wave_credentials">setup</a>
-                </h3>
+                </h4>
 
             </div>
-            <div class="col-md-2">
-                <h3>
+            <div class="col-md-1">
+                <h4>
                     <a href="wave-helper">helper</a>
-                </h3>
+                </h4>
 
             </div>
-            <div class="col-md-2">
-                <h3>
+            <div class="col-md-1">
+                <h4>
                     <a href="/">documentation</a>
-                </h3>
+                </h4>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4">
+                <h4>
+                   Salesforce
+                </h4>
+
+            </div>
+            <div class="col-md-1">
+                <h4>
+                    <a href="/">activate</a>
+                </h4>
 
             </div>
         </div>
 
+        <div class="row">
+            <div class="col-md-4">
+                <h4>
+                    Treasure Data
+                </h4>
 
+            </div>
+            <div class="col-md-1">
+                <h4>
+                    <a href="/">activate</a>
+                </h4>
 
+            </div>
+        </div>
 
+        <div class="row">
+            <div class="col-md-4">
+                <h4>
+                   Send Grid
+                </h4>
+
+            </div>
+            <div class="col-md-1">
+                <h4>
+                    <a href="/">activate</a>
+                </h4>
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4">
+                <h4>
+                   SAMI.io
+                </h4>
+
+            </div>
+            <div class="col-md-1">
+                <h4>
+                    <a href="/">activate</a>
+                </h4>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4">
+                <h4>
+                    Office 365
+                </h4>
+            </div>
+            <div class="col-md-1">
+                <h4>
+                    <a href="/">activate</a>
+                </h4>
+            </div>
+        </div>
 
 
     </div>
