--- a/views/event-edit.html.twig
+++ b/views/event-edit.html.twig
@@ -1,13 +1,19 @@
 {% extends "layout.html.twig" %}
 
-{% block title %}Update Event{% endblock %}
+{% block title %}Event{% endblock %}
 
 {% block content %}
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Update Event
+            <h1 class="page-header">Event
             </h1>
+            <ol class="breadcrumb">
+                <li><a href="/">Home</a></li>
+                <li><a href="/events">View all events</a></li>
+                <li><a href="/createEvent">Create</a></li>
+                <li class="active">Event</li>
+            </ol>
 
         </div>
     </div>
