--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -20,7 +20,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Skyflow.io</a>
+                <a class="navbar-brand" href="/"><img src="{{ app.request.basepath }}/images/logo.jpg" alt="skyflow" style="margin-top: -11px"></a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse-target">
                 <ul class="nav navbar-nav navbar-right">
@@ -34,13 +34,13 @@
                                 <li class="divider"></li>
                                 <li><a href="{{ path('mapping') }}">Mapping</a></li>
                                 <li class="divider"></li>
-                                <li><a href="{{ path('wave_credentials')}}">Wave Setup</a></li>
+                                <li><a href="{{ path('gestionToken') }}">Manage Token</a></li>
+                                <li class="divider"></li>
                                 <li><a href="{{ path('ET_credentials') }}">ExactTarget Setup</a></li>
-                                <li class="divider"></li>
                                 <li><a href="{{ path('et-helper') }}">ExactTarget API Helper</a></li>
-                                <li><a href="{{ path('wave-helper') }}">Wave API Helper</a></li>
                                 <li class="divider"></li>
-                                <li><a href="{{ path('gestionToken') }}">Skyflow-Token Gestion</a></li>
+                                <li><a href="{{ path('wave_credentials')}}">Wave Setup</a></li>
+                                <li><a href="{{ path('wave-helper') }}">Wave API Helper</a></li>
                                 <li class="divider"></li>
                                 <li><a href="{{ path('logout') }}">Log out</a></li>
                             </ul>
