--- a/views/results.html.twig
+++ b/views/results.html.twig
@@ -6,13 +6,22 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Wave API Helper
+                <h1 class="page-header">Wave Helper Json
                 </h1>
+                <ol class="breadcrumb">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/wave-helper">Wave API Helper</a></li>
+                    <li class="active">Result Json</li>
+                </ol>
             </div>
         </div>
 
-{{ results }}
-
+        <div class="panel panel-default">
+            <div class="panel-heading">Result Json</div>
+            <div class="panel-body">
+                {{ results }}
+            </div>
+        </div>
     </div>
 
 {% endblock %}
