--- a/views/wave-apihelper.html.twig
+++ b/views/wave-apihelper.html.twig
@@ -8,6 +8,10 @@
         <div class="col-lg-12">
             <h1 class="page-header">Wave API Helper
             </h1>
+            <ol class="breadcrumb">
+                <li><a href="/">Home</a></li>
+                <li class="active">Wave API Helper</li>
+            </ol>
         </div>
     </div>
 
