Update logo css

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -20,7 +20,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/"><img src="{{ app.request.basepath }}/images/logo.jpg" alt="skyflow" style="margin-top: -11px"></a>
+                <a class="navbar-brand" href="/"><img src="{{ app.request.basepath }}/images/logo.jpg" alt="skyflow"></a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse-target">
                 <ul class="nav navbar-nav navbar-right">
