Update ET Helper

--- a/views/associations.html.twig
+++ b/views/associations.html.twig
@@ -24,7 +24,7 @@
             {% if associations %}
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-condensed viewTable" id="emails">
+                    <table class="table table-hover table-condensed viewTable" id="associations">
                         <thead>
                         <tr>
                             <th>ID</th>
