--- a/views/send-trigger.html.twig
+++ b/views/send-trigger.html.twig
@@ -3,9 +3,22 @@
 {% block title %}Send TriggeredSend{% endblock %}
 
 {% block content %}
+<div class="container">
+	<div class="row">
+		<div class="col-lg-12">
+			<h1 class="page-header">Send TriggeredSend
+			</h1>
+			<ol class="breadcrumb">
+				<li><a href="/">Home</a></li>
+				<li><a href="et-helper">ExactTarget API Helper</a></li>
+				<li class="active">Send TriggeredSend</li>
+			</ol>
+		</div>
+	</div>
 <form action="#" method="post">
 	{{form_widget(sendForm)}}
 
 	 <input type="submit" name="submit" value="Send ! " />
 </form>
+	</div>
 {% endblock %}
