--- a/views/trigger-form.html.twig
+++ b/views/trigger-form.html.twig
@@ -1,8 +1,20 @@
 {% extends "layout.html.twig" %}
 
-{% block title %}Add List{% endblock %}
+{% block title %}Add Trigger{% endblock %}
 
 {% block content %}
+<div class="container">
+	<div class="row">
+		<div class="col-lg-12">
+			<h1 class="page-header">Add TriggeredSend
+			</h1>
+			<ol class="breadcrumb">
+				<li><a href="/">Home</a></li>
+				<li><a href="et-helper">ExactTarget API Helper</a></li>
+				<li class="active">Add TriggeredSend</li>
+			</ol>
+		</div>
+	</div>
 
 <form action="#" method="post">
 	{{form_start(triggerForm)}}
@@ -15,4 +27,5 @@
 	 {{form_end(triggerForm)}}
    
 </form>
+	</div>
 {% endblock %}
